# coris-gencore

./: CHANGELOG.md  CORRECTIONS.md  DEMARRAGE_RAPIDE.md  DONNEES_TEST.md  EXEMPLES_MT101.md  EXEMPLES_MT910.md  GUIDE_MT101.md  IMPLEMENTATION_v2_COMPLETE.md  INDEX.md  INVENTAIRE_PROJET.md  LIVRAISON_FINALE_V3.0.md  PROJET_COMPLET.md  README.md  README_MT101.md  README_MT910.md  README_PME_PMI.md  README_v2.md  RECAPITULATIF.md  STRUCTURE.md  SYNTHESE_FINALE.md  SYNTHESE_V3.0.md  dashboard.html  exemple_iban.txt  exemple_mt103_output.txt  generator.html  guide.html  index.html  menu.html  mt101-generator.html  mt101-generator_new.html  mt103-cemac-generator.html  mt103-cemao-generator.html  mt103-etranger-generator.html  mt103-generator.html  mt103-generator_new.html  prelevements-generator.html  test-mt101.html  test.html  virement-masse-generator.html  welcome.html
altes_ai_devtools/: README.md  pyproject.toml
altes_ai_devtools/src/altes_ai_devtools/: crew.py  main.py
css/: style.css
js/: config.js  generator-core.js  generator-ui.js  main.js  mt101-config.js  mt101-generator.js  mt101-main.js  mt101-main_new.js  mt103-generator.js  mt910-generator.js  utils.js
virement_masse/: testVM01_XOF 1.xlsx  virmul_GNF 2.xlsx  virmul_XAF 1.xlsx
virement_masse/virmul 2/: index.html
