[project]
name = "altes_ai_devtools"
version = "0.1.0"
description = "altes-ai-devtools using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
altes_ai_devtools = "altes_ai_devtools.main:run"
run_crew = "altes_ai_devtools.main:run"
train = "altes_ai_devtools.main:train"
replay = "altes_ai_devtools.main:replay"
test = "altes_ai_devtools.main:test"
run_with_trigger = "altes_ai_devtools.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
